Fix URL encoding of listContents() for jar: URLs
Spaces. The final frontiers. And they weren't handled correctly.

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>